# oppy

./: .gitignore  LICENSE  pyproject.toml
scripts/: imgs_to_text.py  pdf_to_imgs.py
src/oppy/img/: process.py
src/oppy/ocr/: tesseract.py
src/oppy/pdf/: pdf.py
src/oppy/text/: process.py
src/oppy/utils/: io.py
