[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta

[project]
name = "oppy"
version = "0.0.1"
authors = [
  { name="Giorgi Gogelashvili", email="ggoge19@freeuni.edu.ge" },
]
description = "A small package for processing pdf files with ocr"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]