[tool.poetry]
name = "oppy"
version = "0.1.0"
description = "A simple package for ocring pdf files"
authors = ["Nargizi <ggoge19@freeuni.edu.ge>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyMuPDF = "^1.23.26"
opencv-python = "^4.9.0"
pytesseract = "^0.3.10"
fsspec = "^2024.2.0"
ruff = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
